--- a/springboot/src/main/resources/static/index.html
+++ b/springboot/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Index</title>
 </head>
 <body>
-    <h1>Welcomt to spring wrorld!!</h1>
+    <h1>Welcomt to Spring wrorld!!</h1>
 </body>
 </html>
