--- a/springboot/src/main/resources/static/employee.html
+++ b/springboot/src/main/resources/static/employee.html
@@ -7,7 +7,7 @@
 <body>
     <h1>사원관리 프로그램</h1>
     <hr>
-    <a href="http://localhost:8080/employeeRegister.html">사원등록</a>
-    <a href="http://localhost:8080/list">사원목록</a>
+    <a href="http://localhost:8080/employeeRegister.html">사원등록</a>&nbsp;&nbsp;
+    <a href="http://localhost:8080/list">사원리스트</a>
 </body>
 </html>
